--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
-Sunshine.iml
-build
+*.apk
+*.ap_
+*.dex
+*.class
+bin/
+gen/
+out/
+.gradle/
+build/
+local.properties
+proguard/
+*.log
+.navigation/
+captures/
+*.iml
+.idea
+*.jks
+.classpath
+.project
+Thumbs.db
+.DS_Store
