--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.sunshine.android"
+        applicationId "com.android.sunshine"
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
@@ -14,6 +14,7 @@ android {
     buildTypes {
         buildTypes.each {
             it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', "\"d40837949828eda9915c615b571a3e9d\""
+            it.buildConfigField 'String', 'SUNSHINE_HASHTAG', "\"#SunshineApp\""
         }
         release {
             minifyEnabled false
