--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,4 +38,8 @@
             android:authorities="com.android.sunshine"
             android:name=".data.WeatherProvider"/>
     </application>
+ <permission
+        android:name="com.android.sunshine.DB"
+        android:label="Dangerous DB"
+        android:protectionLevel="dangerous" />
 </manifest>
